# ying-sma

./: .clang-format  .gitignore  .gitmodules  .includedirs  ;  CMakeLists.txt  Doxyfile  README.md  android.sln  issue.py  issues.md  rename.py  sec-android.tex
android/core/: CMakeLists.txt
android/core/src/: bsd_socket.cc  threadpool_async.cpp
app/: CMakeLists.txt  files.list
app/include/: TypeDefinition.hh  adhocnetworkemulator.hh  batchscriptgenerator.hh  chunkstore.hh  contentdirectory.hh  controllayer.hh  datablock.hh  datalayer.hh  device.hh  devicewithgps.hh  emulator.hh  flowtable.hh  gpsdriver.hh  gpsinfo.hh  json-forwards.hh  md5.hh  neighborrecords.hh  networkemulator.hh  pendingchunkmanager.hh  plainchunkstore.hh  segmenter.hh  signalhandler.hh  sortdirectory.hh  sortdirectorybypublishtime.hh  sortdirectorybyrank.hh
app/include/control/: ContentDirectory.hh  ContentDiscription.hh  ControlLayer.hh  GPSDriver.hh  NeighborRecordEntry.hh  NeighborRecords.hh  Segmenter.hh  SignalHandler.hh  SortDirectory.hh  SortDirectoryByPublishTime.hh  SortDirectoryByRank.hh
app/include/data/: ChunkStore.hh  DataLayer.hh  FlowTable.hh  PendingChunkManager.hh  PlainChunkStore.hh
app/include/emulator/: Emulator.hh
app/include/json/: json.hh
app/include/network/: AdHocNetworkEmulator.hh  DataBlock.hh  NetworkEmulator.hh
app/include/node/: Device.hh  DeviceWithGPS.hh
app/src/: adhocnetworkemulator.cc  application.cpp  batchscriptgenerator.cc  batchscriptgenerator.cpp  contentdescriptor.cpp  contentdirectory.cc  contentdirectory.cpp  contentdiscription.cc  contentdiscription.cpp  controllayer.cc  controllayer.cpp  datablock.cc  datablock.cpp  datalayer.cc  datalayer.cpp  devicelogger.cc  devicelogger.cpp  devicewithgps.cc  devicewithgps.cpp  echoclient.cc  emulator.cc  emulator.cpp  flowtable.cc  gpsdriver.cc  gpsdriver.cpp  json.cc  json.cpp  main.cc  md5.cc  md5.cpp  neighborrecordentry.cc  neighborrecords.cc  neighborrecords.cpp  pendingchunkmanager.cc  pendingfilemanager.cc  pendingfilemanager.cpp  plainchunkstore.cc  plainchunkstore.cpp  segmenter.cc  segmenter.cpp  (+4 more)
app/src/control/: ContentDirectory.cc  (+8 more)
app/test/: EmulatorTest.hh  SegmenterTest.hh  testConnection.cc  testContentDirectory.cc  testControlLayer.cc  testDataLayer.cc  testSegmenter.cc  test_emulator.hpp  test_main.cc  test_main.cpp  testconnection.cc  testcontentdirectory.cc  testcontentdirectory.cpp  testcontrollayer.cc  testcontrollayer.cpp  testdatalayer.cc  testsegmenter.cc  unitTestChunkStore.cc  unittestchunkstore.cc
ccn/: CMakeLists.txt
ccn/src/: adhocnetworkemulator.cpp  application.cpp  ccnapplication.cpp  ccnmessage.cpp  ccnmessagetypes.cpp  ccnnode.cpp  contentdescriptor.cpp  contentdirectory.cpp  contenttype.cpp  controllayer.cpp  datablock.cpp  datalayer.cpp  devicelogger.cpp  devicewithgps.cpp  emulator.cpp  flowtable.cpp  interesthelper.cpp  interestmessage.cpp  interestrank.cpp  neighborrecordentry.cpp  neighborrecords.cpp  pendingchunkmanager.cpp  pendingfilemanager.cpp  plainchunkstore.cpp  segmenter.cpp  signalhandler.cpp
ccn/test/: chrono.cpp  testconnection.cpp  testcontentdirectory.cpp  testcontrollayer.cpp  testdatalayer.cpp  testsegmenter.cpp  unittestchunkstore.cpp
core/: .lock-waf_linux2_build  CMakeLists.txt  fix.sh  prettylog  printlog  wscript
core/.waf-1.8.4-ad930ff931828ac3e1f8cf7c5682d2a8/: t.bz2
core/include/: BufferPool.hh  DelayQueue.hh  abstractscheduler.hh  actor.hh  address.hh  bits.hh  blockingqueue.hh  blockingsource.hh  bufferpool.hh  bytebuf.hh  bytebuffer.hh  bytes.hh  channel.hh  chrono_literals.hh  cyclicbarrier.hh  delayqueue.hh  future.hh  inetaddress.hh  inetaddress.hh.orig  log.hh  message.hh  message.hh.orig  messagethread.hh  messenger.hh  nativechannel.hh  nativesocket.hh  nativesocketchannel.hh  nativesocketselector.hh  node.hh  pooledbuffer.hh  pow2math.hh  priorityqueue.hh  scheduler.hh  socket.hh  socketaddress.hh  sump.hh  task.hh  thread_interrupted.hh  threadpool.hh  threadscheduler.hh  (+1 more)
core/lib/: logging  testing
core/src/: address.cc  buffer.cpp  byte_buf.cpp  byte_view.cpp  bytebuf.cc  bytebuffer.cc  byteview.cc  channel.cpp  cyclic_barrier.cpp  cyclicbarrier.cc  inet_addr.cpp  inetaddress.cc  main.cc  message.cc  message.cc.orig  message.cpp  message_dispatch.cpp  messenger.cc  messenger.cpp  nativechannel.cc  nativesocket.cc  nativesocketselector.cc  node.cc  node.cpp  scheduler.cc  scheduler2.cc  socket.cc  socket.cpp  socketaddress.cc  thread_scheduler.cpp  threadpool.cc  threadpool.cpp  threadscheduler.cc  winsock.cc
core/test/: :  BufferPoolTest.hh  DelayQueueTest.hh  PriorityQueueTest.hh  ThreadpoolTest.hh  addresstest.hh  bits_test.hpp  bitstest.hh  blockingqueuetest.hh  buffer_pool_test.hpp  bufferpooltest.hh  byte_buf_test.hpp  bytebuffertest.hh  delay_queue_test.hpp  delayqueuetest.hh  messagetest.hh  messengertest.hh  nativechanneltest.hh  nativesockettest.hh  priority_queue_test.hpp  priorityqueuetest.hh  rws_locktest.hh  rws_mutextest.hh  test_main.cc  test_main.cpp  test_usage.cc  thread_scheduler_test.hpp  threadpool_test.hpp  threadpooltest.hh  threadschedulertest.hh
ns3/: .includedirs  CMakeLists.txt  README.md  lib
ns3/cmake/: ns3.cmake
ns3/include/: ns3
ns3/sim/: sim_main.cpp  simple_launcher.cpp  wifi_simple.cpp  wifi_simple.hpp
ns3/src/: app_container.cpp  async.cpp  chrono.cpp  container_app.cpp  nodecontainerapp.cpp  ns3_channel.cpp  ns3_container_app.cpp  ns3_inet_channel.cpp  ns3_inet_socket.cpp  ns3_launcher.cpp  ns3_scheduler.cpp  ns3_socket.cpp  ns3appcontainer.cpp  ns3async.cpp  ns3inetlink.cpp  ns3inetsocket.cpp  ns3nodecontainer.cpp  time.cpp
ns3/test/: test_container_app.hpp  test_main.cpp  test_ns3_socket.hpp  udp-echo.cpp
platform/: .includedirs  CMakeLists.txt
platform/linux/: .includedirs  CMakeLists.txt
platform/ns3/: CMakeLists.txt  README.md  test_main.cc
platform/src/: actor.cpp  buffer.cpp  buffer_view.cpp  inet_addr.cpp  message.cpp  message_dispatch.cpp  threadpool.cpp
platform/test/: bits_test.hpp  messenger_test.hpp  test_main.cpp  thread_scheduler_test.hpp
(+1622 files in other folders)
